# mcp_chatbot

./: .env.example  .gitignore  Dockerfile  README.md  agent_config.py  app.py  calculator.py  chainlit.md  guardrails.py  pyproject.toml  tracing.py
.chainlit/: config.toml
.github/workflows/: ci.yml
scripts/: discover_mcp.py  smoke_langfuse.py
tests/: conftest.py  test_calculator.py  test_guardrails.py  test_mcp_integration.py
