[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-chatbot"
version = "0.1.0"
description = "Meridian Electronics customer support chatbot"
requires-python = ">=3.11"
dependencies = [
    "chainlit>=2.0",
    "openai-agents>=0.0.16",
    "openai>=1.50",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[tool.setuptools]
py-modules = ["app", "agent_config", "guardrails"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
